--- a/TypingGame/MainWindow.xaml
+++ b/TypingGame/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TypingGame"
-        mc:Ignorable="d"
+        mc:Ignorable="d" 
         Title="MainWindow" Height="800" Width="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -13,10 +13,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Canvas Grid.Row="0">
-            <TextBlock Name="text1"
-                       FontSize="50"
-                       Text="Jebac disa"/>
+        <Canvas Grid.Row="0" x:Name="Canvas">
+
         </Canvas>
 
         <TextBox Name="input"
@@ -24,5 +22,8 @@
                  Margin="300 10 300 100"
                  FontSize="18"
                  PreviewKeyDown="keyDownEventHandler"/>
+
+        <Button Grid.Row="1" Width="50" Height="20" Click="Button_Click"/>
+        
     </Grid>
 </Window>
